RESOLVED FIXED300664
Fix RetainPtr::unsafeGet() in WebCore::AXRemoteFrame::initializePlatformElementWithRemoteToken()
https://bugs.webkit.org/show_bug.cgi?id=300664
Summary Fix RetainPtr::unsafeGet() in WebCore::AXRemoteFrame::initializePlatformEleme...
David Kilzer (:ddkilzer)
Reported 2025-10-13 16:41:27 PDT
Fix RetainPtr::unsafeGet() in WebCore::AXRemoteFrame::initializePlatformElementWithRemoteToken().
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-13 16:41:32 PDT
David Kilzer (:ddkilzer)
Comment 2 2025-10-13 16:46:34 PDT
EWS
Comment 3 2025-10-14 08:35:21 PDT
Committed 301478@main (d62b7a6b14e3): <https://commits.webkit.org/301478@main> Reviewed commits have been landed. Closing PR #52267 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.