Fix RetainPtr::unsafeGet() in WebCore::AXRemoteFrame::initializePlatformElementWithRemoteToken() <https://bugs.webkit.org/show_bug.cgi?id=300664> <rdar://162561883>

Reviewed by Joshua Hoffman.

* Source/WebCore/accessibility/ios/AccessibilityObjectIOS.mm:
(WebCore::AXRemoteFrame::initializePlatformElementWithRemoteToken):
- Store result of unarchivedTokenForData() in RetainPtr to fix the bug.

Canonical link: https://commits.webkit.org/301478@main